# sync_dataclasses

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml
src/atomic_dataclasses/: ADataClass.py  __init__.py
