[project]
name = "atomic_dataclasses"
version = "0.0.1"
authors = [
  { name="BHznJNs", email="441768875@qq.com" },
]
description = "A library for creating atomic data classes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "PySide6"
]

[project.urls]
Homepage = "https://github.com/BHznJNs/atomic_dataclasses"
Issues = "https://github.com/BHznJNs/atomic_dataclasses/issues"
